--- a/davaleba/style.css
+++ b/davaleba/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 nav {
@@ -43,6 +44,7 @@ h1{
     width: 50%;
     height: 950px;
     object-fit: cover;
+    min-width: 50%;
 } 
 
 .b{
@@ -109,6 +111,7 @@ p {
     width: 450px;
     font-size: 3.2rem;
     color: rgb(74, 112, 108);
+    padding-top: 70px;
 }
 
 .page5 {
@@ -131,24 +134,23 @@ p {
 
 .section {
     display: flex;
-    background-color: white;
-    padding: 35px;
-    margin-left: auto;
-    margin-top: -20px;
-    margin-right: 60px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    color: rgb(74, 112, 108);
-    width: 470px;
-    height: 270px;
+    justify-content: start ;
+    align-items: end;
+    flex-direction: column;
+    margin: 50px 40px 20px 335px;
 }
 
 .h3{
     text-align: center;
 }
 .main6{
+    width: 440px;
+    height: 250px;
     display: flex;
     flex-direction: column;
     gap: 35px;
+    margin: 50px 40px 20px 335px;
+    background-color: white;
 }
 
 #main {
@@ -167,14 +169,16 @@ p {
     width: 413px;
     height: 482px;
     object-fit: cover;
+    position: relative;
+    margin: 0px 0px 0px calc((100% - 490px) * 1);
 }
 
 .page6 {
     display: flex;
     flex-direction: column;
     width: 50%;
-    margin: 80px 90px 100px 750px;
-    align-items: end;
-    gap: 50px;
+    align-items: flex-end;
+    margin-right: 100px ;
+    gap: 100px;
     height: 300px;
 }
